--- a/.travil.yml
+++ b/.travil.yml
@@ -1,14 +1,19 @@
 language: android
 dist: trusty
+install: ant deps
 android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    # - tools
-    # - platform-tools
-
-    # The BuildTools version used by your project
     - build-tools-26.0.2
+    - tools
+    - platform-tools
+    - add-on
+    - extra
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 
     # The SDK version used to compile your project
     - android-30
@@ -22,3 +27,9 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-x86-android-26
     - sys-img-armeabi-v7a-android-17
+
+  before_script:
+    - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a -c 100M
+    - emulator -avd test -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
