--- a/.travil.yml
+++ b/.travil.yml
@@ -33,3 +33,5 @@ android:
     - emulator -avd test -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
+
+  ./gradlew build connectedCheck
