modified travis pipeline to run both unit and instrumental/integration tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     //DI Library
     dependencies {
         implementation "com.google.dagger:dagger:$rootProject.daggerVersion"
-        annotationProcessor("com.google.dagger:dagger-android:$rootProject.daggerVersion")
+        kapt("com.google.dagger:dagger-android:$rootProject.daggerVersion")
         implementation "com.google.dagger:dagger-android-support:$rootProject.daggerVersion"
         kapt "com.google.dagger:dagger-compiler:$rootProject.daggerVersion"
         kapt "com.google.dagger:dagger-android-processor:$rootProject.daggerVersion"
