--- a/.travil.yml
+++ b/.travil.yml
@@ -34,4 +34,4 @@ android:
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
-  ./gradlew build connectedCheck
+  ./gradlew test && ./gradlew connectedAndroidTest
